--- a/package.json
+++ b/package.json
@@ -3,22 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "next build && node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "@redis/client": "^1.3.0",
+    "axios": "^1.1.3",
+    "bull": "^4.10.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "flowbite": "^1.5.3",
+    "flowbite-react": "^0.3.2",
+    "formik": "^2.2.9",
+    "isomorphic-unfetch": "^3.1.0",
+    "kafkajs": "^2.2.2",
     "next": "13.0.0",
+    "nodemailer": "^6.8.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
+    "yup": "^0.32.11",
+    "zustand": "^4.1.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "18.11.7",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.0",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
